# so101-control

./: .gitignore  01_search_port.py  02_setup_motors.py  03_identify_motors.py  04_calibrate.py  04_get_motors.py  05_simple_ controller.py  05_simple_controller.py  README.md  emergency_stop.py  pyproject.toml  servo_constants.py  test.py
.kiro/settings/: mcp.json
agent/: capture.py  prompt.txt  so101.py
