[project]
name = "legobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feetech-servo-sdk>=1.0.0",
    "mcp[cli]>=1.25.0",
    "opencv-python>=4.12.0.88",
    "pyserial>=3.5",
    "pyyaml>=6.0.3",
    "ruff>=0.14.10",
    "strands-agents>=1.21.0",
]
